@@ -33,8 +33,7 @@
     <script type="text/javascript" src="js/jquery-ui-1.8.23-min.js"></script>
     <script type="text/javascript" src="js/jquery.contextMenu.js"></script>
 	<script type="text/javascript" src="js/jquery.tipped-2.1b.min.js"></script>
-	<script type="text/javascript" src="js/jqueryFileTree.js"></script>
-	<script type="text/javascript" src="js/jquery.textFill.js"></script>		
+	<script type="text/javascript" src="js/jqueryFileTree.js"></script>		
 	<script type="text/javascript" src="js/jquery.scrollTo-min.js"></script>
 	<script type="text/javascript" src="js/jquery.jec-1.3.1.js"></script>
 	
